wrapping issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,6 +126,7 @@ a{
   #sign-up {
 	font-family: 'Poppins';
 	text-align: center;
+	font-size: medium;
   
   }
   
